autoconf 2.53 or later is now a prerequisite
git-svn-id: svn://svn.code.sf.net/p/swig/code/branches/rel-1-3@4131 d7a574c2-d0a9-4346-9435-0907474fee8b

--- a/SWIG/Tools/configure.in
+++ b/SWIG/Tools/configure.in
@@ -1,4 +1,5 @@
 AC_INIT(ltmain.sh)
+AC_PREREQ(2.53)
 
 ##-----------------------------------------------------------------------------
 ## libtool configuration
