Makefile changes: INCLUDES used instead of INCLUDE as it clashes with an environment variable that MSVC needs. @OBJEXT@ used instead of .o for platform independence (ie for native Windows compilers!)
git-svn-id: svn://svn.code.sf.net/p/swig/code/branches/rel-1-3@4132 d7a574c2-d0a9-4346-9435-0907474fee8b

--- a/SWIG/Examples/GIFPlot/Guile/simple/Makefile
+++ b/SWIG/Examples/GIFPlot/Guile/simple/Makefile
@@ -5,20 +5,20 @@ SRCS       =
 TARGET     = simple
 INTERFACE  = simple.i
 LIBS       = -L../.. -lgifplot
-INCLUDE    = -I../../Include
+INCLUDES   = -I../../Include
 
 all:: static
 
 dynamic::
 	$(MAKE) -f $(TOP)/Makefile TOP='$(TOP)' \
 	SRCS='$(SRCS)' SWIG='$(SWIG)' \
-	INCLUDE='$(INCLUDE)' LIBS='$(LIBS)' SWIGOPT='$(SWIGOPT)' \
+	INCLUDES='$(INCLUDES)' LIBS='$(LIBS)' SWIGOPT='$(SWIGOPT)' \
 	TARGET='$(TARGET)' INTERFACE='$(INTERFACE)' guile
 
 static::
 	$(MAKE) -f $(TOP)/Makefile TOP='$(TOP)' \
 	SRCS='$(SRCS)' SWIG='$(SWIG)' \
-	INCLUDE='$(INCLUDE)' LIBS='$(LIBS)' SWIGOPT='$(SWIGOPT)' \
+	INCLUDES='$(INCLUDES)' LIBS='$(LIBS)' SWIGOPT='$(SWIGOPT)' \
 	TARGET='$(TARGET)' INTERFACE='$(INTERFACE)' guile_static
 
 clean::
