--- a/SWIG/Examples/GIFPlot/Guile/full/Makefile
+++ b/SWIG/Examples/GIFPlot/Guile/full/Makefile
@@ -5,20 +5,20 @@ SRCS       =
 TARGET     = gifplot
 INTERFACE  = gifplot.i
 LIBS       = -L../.. -lgifplot -lm
-INCLUDE    = -I../../Include
+INCLUDES   = -I../../Include
 
 all:: static
 
 dynamic:: 
 	$(MAKE) -f $(TOP)/Makefile TOP='$(TOP)' \
 	SRCS='$(SRCS)' SWIG='$(SWIG)' \
-	INCLUDE='$(INCLUDE)' LIBS='$(LIBS)' SWIGOPT='$(SWIGOPT)' \
+	INCLUDES='$(INCLUDES)' LIBS='$(LIBS)' SWIGOPT='$(SWIGOPT)' \
 	TARGET='$(TARGET)' INTERFACE='$(INTERFACE)' guile
 
 static::
 	$(MAKE) -f $(TOP)/Makefile TOP='$(TOP)' \
 	SRCS='$(SRCS)' SWIG='$(SWIG)' \
-	INCLUDE='$(INCLUDE)' LIBS='$(LIBS)' SWIGOPT='$(SWIGOPT)' \
+	INCLUDES='$(INCLUDES)' LIBS='$(LIBS)' SWIGOPT='$(SWIGOPT)' \
 	TARGET='$(TARGET)' INTERFACE='$(INTERFACE)' guile_static
 
 clean::
