--- a/SWIG/Examples/GIFPlot/Java/full/Makefile
+++ b/SWIG/Examples/GIFPlot/Java/full/Makefile
@@ -5,11 +5,11 @@ SRCS       =
 TARGET     = gifplot
 INTERFACE  = gifplot.i
 LIBS       = -L../.. -lgifplot
-INCLUDE    = -I../../Include
+INCLUDES   = -I../../Include
 
 all::
 	$(MAKE) -f $(TOP)/Makefile SRCS='$(SRCS)' SWIG='$(SWIG)' \
-	INCLUDE='$(INCLUDE)' LIBS='$(LIBS)' SWIGOPT='$(SWIGOPT)' \
+	INCLUDES='$(INCLUDES)' LIBS='$(LIBS)' SWIGOPT='$(SWIGOPT)' \
 	TARGET='$(TARGET)' INTERFACE='$(INTERFACE)' java
 	javac *.java
 
