--- a/SWIG/Examples/GIFPlot/Lib/Makefile.in
+++ b/SWIG/Examples/GIFPlot/Lib/Makefile.in
@@ -1,5 +1,5 @@
 CC      = @CC@
-INCLUDE = -I../Include
+INCLUDES= -I../Include
 CFLAGS  = -O
 SRCS    = frame.c color.c plot2d.c plot3d.c font.c pixmap.c matrix.c gif.c
 OBJS    = $(SRCS:.c=.o)
@@ -8,7 +8,7 @@ RANLIB  = @RANLIB@
 TARGET  = ../libgifplot.a
 
 .c.o: 
-	$(CC) $(INCLUDE) $(CFLAGS) -c -o $*.o $<
+	$(CC) $(INCLUDES) $(CFLAGS) -c -o $*.o $<
 
 all:  $(OBJS)
 	@rm -f ../libgifplot.a
