--- a/SWIG/Examples/GIFPlot/Php/shadow/Makefile
+++ b/SWIG/Examples/GIFPlot/Php/shadow/Makefile
@@ -5,11 +5,11 @@ SRCS       =
 TARGET     = php_gifplot
 INTERFACE  = gifplot.i
 LIBS       = -L../.. -lgifplot -lm
-INCLUDE    = -I../../Include
+INCLUDES   = -I../../Include
 
 all::
 	$(MAKE) -f $(TOP)/Makefile SRCS='$(SRCS)' SWIG='$(SWIG)' \
-	INCLUDE='$(INCLUDE)' LIBS='$(LIBS)' SWIGOPT='$(SWIGOPT)' \
+	INCLUDES='$(INCLUDES)' LIBS='$(LIBS)' SWIGOPT='$(SWIGOPT)' \
 	TARGET='$(TARGET)' INTERFACE='$(INTERFACE)' php4
 
 clean::
