--- a/SWIG/Source/CParse/Makefile.in
+++ b/SWIG/Source/CParse/Makefile.in
@@ -14,12 +14,12 @@ RANLIB   = @RANLIB@
 
 TARGET   = libcparse.a
 
-OBJS     = parser.o cscanner.o templ.o util.o
+OBJS     = parser.@OBJEXT@ cscanner.@OBJEXT@ templ.@OBJEXT@ util.@OBJEXT@
 
 SRCS     = cscanner.c templ.c util.c 
 
 PARSER   = $(srcdir)/parser.y
-INCLUDE  = -I$(srcdir)/../Include               \
+INCLUDES = -I$(srcdir)/../Include               \
            -I$(srcdir)/.                        \
            -I$(srcdir)/../Swig                  \
            -I$(srcdir)/../Preprocessor          \
@@ -27,8 +27,8 @@ INCLUDE  = -I$(srcdir)/../Include               \
 	   -I../Include				\
 	   -I.
 
-.c.o:
-	$(CC) $(CFLAGS) $(INCLUDE) -c -o $*.o $<
+.c.@OBJEXT@:
+	$(CC) $(CFLAGS) $(INCLUDES) -c -o $*.@OBJEXT@ $<
 
 cparse:   $(TARGET)
 
@@ -36,27 +36,27 @@ $(TARGET): $(OBJS)
 	$(AR) cr $(TARGET) $(OBJS)
 	$(RANLIB) $(TARGET)
 
-parser.o: parser.c
-	$(CC) $(INCLUDE) $(CFLAGS) $< -c -o parser.o
+parser.@OBJEXT@: parser.c
+	$(CC) $(INCLUDES) $(CFLAGS) $< -c -o parser.@OBJEXT@
 
 parser.c parser.h: $(PARSER)
 	$(YACC) @YFLAGS@ $(PARSER)
 	@cp y.tab.h parser.h
 	@cp y.tab.c parser.c
 
-scanner.o: parser.h
+scanner.@OBJEXT@: parser.h
 
 parser::
 	@cp y.tab.c.bison parser.c
 	@cp y.tab.h.bison parser.h
 	@cp y.tab.h.bison y.tab.h
-	$(CC) $(CFLAGS) parser.c -c -o parser.o
+	$(CC) $(CFLAGS) parser.c -c -o parser.@OBJEXT@
 
 clean::
-	rm -f *.o $(TARGET) y.tab.c y.tab.h
+	rm -f *.@OBJEXT@ $(TARGET) y.tab.c y.tab.h
 
 nuke::
-	rm -f Makefile *~ #* core a.out
+	rm -f Makefile *~
 
 
 
