Gifplot Makefiles were generated twice by two separate configure.in's. Removed unneccessary Gifplot configure.in. Reduces configuration time.
git-svn-id: svn://svn.code.sf.net/p/swig/code/branches/rel-1-3@4138 d7a574c2-d0a9-4346-9435-0907474fee8b

--- a/SWIG/configure.in
+++ b/SWIG/configure.in
@@ -1048,7 +1048,7 @@ AC_SUBST(release_suffix)
 # an 'install-sh' script in the Examples directory?
 ###########
 
-AC_CONFIG_SUBDIRS(Source/DOH Tools Examples/GIFPlot)
+AC_CONFIG_SUBDIRS(Source/DOH Tools)
 
 # NOTE: The following ref to `Source' should NOT be prefixed w/ `$srcdir/'.
 # We can remove it if `Source' ever has a generated file but not before.
